--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
   "name": "prezentation",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "",
   "main": "index.js",
+  "bin": {
+    "@jugurthak5/prezentation": "bin/prezentation-cli",
+    "prezentation": "bin/prezentation-cli"
+  },
   "dependencies": {
     "node-html-parser": "^3.3.5"
   },
   "devDependencies": {},
   "scripts": {
     "dev": "nodemon index.js",
+    "cli": "prezentation",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
